# UnityPhysXFlow

./: .gitattributes  .gitignore  DEPLOYMENT.md  FINAL_SUMMARY.md  GPU_RENDERER_SETUP.md  PACKAGE_SETUP_COMPLETE.md  PROJECT_STRUCTURE.md  README.md  SIMULATION_API.md  UNITY_INTEGRATION_SUMMARY.md  build-native.ps1  build.ps1  update-version.ps1
.github/workflows/: auto-version.yml  build-release.yml  validate-package.yml
PhysX/flow/: premake5.lua
PhysX/flow/_compiler/vs2022/nvflow/: nvflow.vcxproj  nvflow.vcxproj.filters
PhysX/flow/_compiler/vs2022/nvflow_rtx/: nvflow_rtx.vcxproj
PhysX/flow/_compiler/vs2022/nvfloweditor/: nvfloweditor.vcxproj  nvfloweditor.vcxproj.filters
PhysX/flow/_compiler/vs2022/nvflowext/: nvflowext.vcxproj  nvflowext.vcxproj.filters
PhysX/flow/_compiler/vs2022/nvflowext_rtx/: nvflowext_rtx.vcxproj
PhysX/flow/_compiler/vs2022/nvflowshadercompiler/: nvflowshadercompiler.vcxproj  nvflowshadercompiler.vcxproj.filters
PhysX/flow/_compiler/vs2022/nvflowshadertool/: nvflowshadertool.vcxproj  nvflowshadertool.vcxproj.filters
PhysX/flow/_generated/windows-x86_64/debug/nvflow/shaders/: AdvectionDensity1CS_d3d12.hlsl.h  AdvectionDensity1CS_vulkan.hlsl.h  AdvectionDensity2CS_d3d12.hlsl.h  AdvectionDensity2CS_vulkan.hlsl.h  AdvectionDownsampleCS_d3d12.hlsl.h  AdvectionDownsampleCS_vulkan.hlsl.h  AdvectionFadeDensityCS.hlsl.h  AdvectionFadeDensityCS_d3d12.hlsl.h  AdvectionFadeDensityCS_vulkan.hlsl.h  AdvectionFadeVelocityCS_d3d12.hlsl.h  AdvectionSimpleCS_d3d12.hlsl.h  (+83 more)
Unity/: FlowEmitter.cs  FlowGrid.cs  UnityPhysXFlow.cs
Unity/Shaders/: VolumetricFluid.shader
docs/: automatic-dll-installation.md  flow-build-workaround.md  github-publishing.md  implementation-notes.md  nvidia-flow-shaders-integration.md  quick-reference.md  unity-deployment-checklist.md
native/: CMakeLists.txt
native/include/: UnityPhysXFlow.h  flow_bridge.h
native/src/: UnityPhysXFlow.cpp  flow_bridge.cpp
(+379 files in other folders)
